package entity;

public enum Difficulty {
    EASY,
    NORMAL,
    CHALLENGING
}
