package entity;

public enum Tag {
    SUPPE,
    SALAT,
    HAUPTSPEISE,
    NACHTISCH,
    ANDERS
}
